--- a/tau/src/css/profile/mobile/changeable/common/tabs.less
+++ b/tau/src/css/profile/mobile/changeable/common/tabs.less
@@ -3,8 +3,8 @@
 	height: 100%;
 	overflow: hidden;
 	.ui-title {
-		height: 106 * @unit_base;
-		line-height: 106 * @unit_base;
+		height: 100 * @unit_base;
+		line-height: 100 * @unit_base;
 		position: relative;
 		font-size: @font_size_tabs_title_text;
 		font-weight: 200;
@@ -14,7 +14,7 @@
 		background-color: @color_tabs_title_bg;
 	}
 	.ui-tabbar {
-		height: 109 * @unit_base;
+		height: 110 * @unit_base;
 		background-color: @color_tabs_tabbar_bg;
 	}
 	&.ui-tabs-with-title .ui-tabbar-link {
